[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jusotscope"
version = "0.1.0"
description = "Unified offensive security toolkit, recon, scanning, AD, reporting"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "dnspython>=2.6",
    "httpx>=0.26",
    "rich>=13",
]

[project.scripts]
jusotscope = "jusotscope.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
