[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jusotscope"
version = "0.1.4"
description = "Unified offensive security toolkit, recon, scanning, AD, reporting"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "dnspython>=2.6",
    "httpx>=0.26",
    "ldap3>=2.9",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
jusotscope = "jusotscope.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jusotscope = ["wordlists/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "network: tests that make network calls (skipped by default)",
]

[tool.coverage.run]
source = ["jusotscope"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if getattr\\(sys, .frozen., False\\):",
    "except Exception:",
    "raise NotImplementedError",
]
